--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>MR PK DRILLER</title>
+  <title>TEDDY TECH SUPPORT</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -125,8 +125,8 @@
 </div>
 
 <header>
-  <img src="https://i.ibb.co/sdDkVnpX/nexus-xmd.jpg" alt="PK TECH Logo"/>
-  <h1>MR PK DRILLER</h1>
+  <img src="https://i.ibb.co/sdDkVnpX/nexus-xmd.jpg" alt="TEDDY TECH Logo"/>
+  <h1>TEDDY TECH</h1>
   <p>Get my service's at just an affordable price   <strong>contact</strong></p>
   <div id="clock"></div>
 </header>
@@ -150,12 +150,12 @@
 <section>
   <h2>Source Code</h2>
   <p><strong>GITHUB ACCOUNT:</strong></p>
-  <a href="https://github.com/Pkdriller" target="_blank">
+  <a href="https://github.com/Teddytech1" target="_blank">
     <button class="btn">View my profile on GitHub</button>
   </a>
-  <p><strong>NEXUS-XMD Bot:</strong></p>
-  <a href="https://github.com/Pkdriller/NEXUS-XMD" target="_blank">
-    <button class="btn" style="background:#00ffff;">View NEXUS-XMD on GitHub</button>
+  <p><strong>TEDDY-XMD Bot:</strong></p>
+  <a href="https://github.com/Teddytech1/TEDDY-XMD" target="_blank">
+    <button class="btn" style="background:#00ffff;">View TEDDY-XMD on GitHub</button>
   </a>
 </section>
 
@@ -185,19 +185,19 @@
 </script>
 
 <section>
-  <h2>Connect with PK DRILLER</h2>
+  <h2>Connect with TEDDY TECH</h2>
   <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:15px;margin-top:20px;">
-    <a class="btn" href="https://wa.me/254785392165" target="_blank"><i class="fab fa-whatsapp"></i> contact</a>
-    <a class="btn" href="https://whatsapp.com/channel/0029Vad7YNyJuyA77CtIPX0x" target="_blank"><i class="fab fa-whatsapp"></i> channel</a>
-    <a class="btn" href="https://t.me/dev_pkdrillerbot" style="background:#34ace0;" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
-    <a class="btn" href="https://www.instagram.com/pk_tech01?igsh=MTM0Y2p3ZHpxMXZraA==" style="background:#e1306c;" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-    <a class="btn" href="https://www.facebook.com/profile.php?id=100091580206517" style="background:#3b5998;" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-    <a class="btn" href="https://www.youtube.com/@Pktech-1911" style="background:#ff0000;" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+    <a class="btn" href="https://wa.me/254799963583" target="_blank"><i class="fab fa-whatsapp"></i> contact</a>
+    <a class="btn" href="https://whatsapp.com/channel/yJuyA77CtIPX0x" target="_blank"><i class="fab fa-whatsapp"></i> channel</a>
+    <a class="btn" href="https://t.me/Teddy_md" style="background:#34ace0;" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+    <a class="btn" href="https://www.instagram.com/Kibet_fx_?igsh=MTM0Y2p3ZHpxMXZraA==" style="background:#e1306c;" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+    <a class="btn" href="https://www.facebook.com/profile.php?id=100090206517" style="background:#3b5998;" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+    <a class="btn" href="https://www.youtube.com/@none" style="background:#ff0000;" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </div>
 </section>
 
 <footer>
-  © 2025 PK DRILLER | WhatsApp: +254 785 392165 | All rights reserved.
+  © 2025 TEDDY TECH  | All rights reserved.
 </footer>
 
 <script>
@@ -220,7 +220,7 @@
     newTab.document.write(`
       <html>
       <head>
-        <title>Order Confirmed - PK TECH</title>
+        <title>Order Confirmed - TEDDY TECH</title>
         <style>
           body {
             background-color: #0d0d0d;
@@ -260,12 +260,12 @@
       <body>
         <div class="container">
           <h2>Payment Instructions</h2>
-          <p><strong>Send KES 100 to:</strong></p>
-          <p><strong>Number:</strong> 254785392165</p>
-          <p><strong>Name:</strong> Benard Wangari</p>
+          <p><strong>Send KES 80 to:</strong></p>
+          <p><strong>Number:</strong> 0799963583</p>
+          <p><strong>Name:</strong> Wycliffe Kibet</p>
           <p>After payment, click below:</p>
-          <a href="https://wa.me/254785392165?text=Hi%2C+I+want+to+pay+100+for+Whatsapp+fast+Bot+and+i+send+screenshot+after+payment" target="_blank">Confirm via WhatsApp</a>
-          <a href="https://pkxmdverificationweb.vercel.app/Pkdriller" target="_blank">Go to Deployment</a>
+          <a href="https://wa.me/254799963583?text=Hi%2C+I+want+to+pay+80+for+Whatsapp+fast+Bot+and+i+send+screenshot+after+payment" target="_blank">Confirm via WhatsApp</a>
+          <a href="https://t.me/Teddy_md" target="_blank">Go to Deployment</a>
         </div>
       </body>
       </html>
