--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>TEDDY TECH SUPPORT</title>
+  <title>RICHIE TECH SUPPORT</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -125,8 +125,8 @@
 </div>
 
 <header>
-  <img src="https://files.catbox.moe/ybxkq1.jpg" alt="TEDDY TECH Logo"/>
-  <h1>TEDDY TECH</h1>
+  <img src="https://files.catbox.moe/ybxkq1.jpg" alt="RICHIE TECH Logo"/>
+  <h1>RICHIE TECH</h1>
   <p>Get my service's at just an affordable price   <strong>contact</strong></p>
   <div id="clock"></div>
 </header>
@@ -150,12 +150,12 @@
 <section>
   <h2>Source Code</h2>
   <p><strong>GITHUB ACCOUNT:</strong></p>
-  <a href="https://github.com/Teddytech1" target="_blank">
+  <a href="https://github.com/" target="_blank">
     <button class="btn">View my profile on GitHub</button>
   </a>
-  <p><strong>TEDDY-XMD Bot:</strong></p>
-  <a href="https://github.com/Teddytech1/TEDDY-XMD" target="_blank">
-    <button class="btn" style="background:#00ffff;">View TEDDY-XMD on GitHub</button>
+  <p><strong>RICHIE-XMD Bot:</strong></p>
+  <a href="https://github.com/RICHEZ59/RICHIE-XMD" target="_blank">
+    <button class="btn" style="background:#00ffff;">View RICHIE-XMD on GitHub</button>
   </a>
 </section>
 
@@ -185,19 +185,19 @@
 </script>
 
 <section>
-  <h2>Connect with TEDDY TECH</h2>
+  <h2>Connect with RICHIE TECH</h2>
   <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:15px;margin-top:20px;">
-    <a class="btn" href="https://wa.me/254799963583" target="_blank"><i class="fab fa-whatsapp"></i> contact</a>
+    <a class="btn" href="https://wa.me/254714384869" target="_blank"><i class="fab fa-whatsapp"></i> contact</a>
     <a class="btn" href="https://whatsapp.com/channel/yJuyA77CtIPX0x" target="_blank"><i class="fab fa-whatsapp"></i> channel</a>
-    <a class="btn" href="https://t.me/Teddy_md" style="background:#34ace0;" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
-    <a class="btn" href="https://www.instagram.com/Kibet_fx_?igsh=MTM0Y2p3ZHpxMXZraA==" style="background:#e1306c;" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-    <a class="btn" href="https://www.facebook.com/profile.php?id=100090206517" style="background:#3b5998;" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+    <a class="btn" href="https://" style="background:#34ace0;" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+    <a class="btn" href="https://www.instagram.com/_?igsh=MTM0Y2p3ZHpxMXZraA==" style="background:#e1306c;" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+    <a class="btn" href="https:/7" style="background:#3b5998;" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
     <a class="btn" href="https://www.youtube.com/@none" style="background:#ff0000;" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </div>
 </section>
 
 <footer>
-  © 2025 TEDDY TECH  | All rights reserved.
+  © 2025 RICHIE TECH  | All rights reserved.
 </footer>
 
 <script>
@@ -220,7 +220,7 @@
     newTab.document.write(`
       <html>
       <head>
-        <title>Order Confirmed - TEDDY TECH</title>
+        <title>Order Confirmed - RICHIE TECH</title>
         <style>
           body {
             background-color: #0d0d0d;
@@ -261,11 +261,11 @@
         <div class="container">
           <h2>Payment Instructions</h2>
           <p><strong>Send KES 80 to:</strong></p>
-          <p><strong>Number:</strong> 0799963583</p>
-          <p><strong>Name:</strong> Wycliffe Kibet</p>
+          <p><strong>Number:</strong> 0714384859</p>
+          <p><strong>Name:</strong> RICHARD MOSES</p>
           <p>After payment, click below:</p>
-          <a href="https://wa.me/254799963583?text=Hi%2C+I+want+to+pay+80+for+Whatsapp+fast+Bot+and+i+send+screenshot+after+payment" target="_blank">Confirm via WhatsApp</a>
-          <a href="https://t.me/Teddy_md" target="_blank">Go to Deployment</a>
+          <a href="https://wa.me/254714384859?text=Hi%2C+I+want+to+pay+80+for+Whatsapp+fast+Bot+and+i+send+screenshot+after+payment" target="_blank">Confirm via WhatsApp</a>
+          <a href="https:/" target="_blank">Go to Deployment</a>
         </div>
       </body>
       </html>
