--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </div>
 
 <header>
-  <img src="https://files.catbox.moe/ybxkq1.jpg" alt="RICHIE TECH Logo"/>
+  <img src="https://files.catbox.moe/ej97yl.jpg" alt="RICHIE TECH Logo"/>
   <h1>RICHIE TECH</h1>
   <p>Get my service's at just an affordable price   <strong>contact</strong></p>
   <div id="clock"></div>
